# Site_Pilot_V2

./: 001_init.sql  DESIGN.md  Dockerfile  PRODUCT.md  README.md  api.js  auth_users.py  dashboard.js  db.py  docker-compose.yml  documents.py  equipment.js  finance.js  finance.py  fly.toml  helpers.py  icons.js  index.html  labour.py  landing.js  login.js  main.js  main.py  materials.js  materials.py  misc.py  notifications.js  procurement.js  project.js  projects.js  projects.py  pyproject.toml  render.yaml  reports.js  reports.py  requirements.txt  security.py  seed.py  signup.js  smoke.py  (+6 more)
